istio/Kiali_dashboard/kiali_gateway_and_Virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
spec:
  hosts:
  - "*"
  gateways:
  - kiali-gateway
  http:
    - route:
      - destination:
          host: kiali 
          port:
              number: 20001
